tests/snapshots/run_wpt_conformance__litert_cast_int32_4D_tensor_to_int64.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast int32 4D tensor to int64",
    "litert",
    "PASS",
)
